# artemis

./: .gitignore  .graphqlconfig  Cargo.toml  Makefile.toml  README.md  aliases.js  babel.config.js  index.html  jest.config.js  package-lock.json  package.json  rustfmt.toml  search-index.js  settings.html  source-files.js  tsconfig.json
ahash/: all.html  index.html  sidebar-items.js  struct.ABuildHasher.html  struct.AHashMap.html  struct.AHashSet.html  struct.AHasher.html  struct.RandomState.html
aho_corasick/: enum.MatchKind.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.StreamFindIter.html
arc_swap/: index.html  (+5 more)
artemis/: Cargo.toml  README.md  all.html  enum.PathFragment.html  enum.RequestPolicy.html  enum.ResultSource.html  fn.progressive_hash.html  index.html  macro.ext!.html  macro.ext.html  macro.wasm_client.html  sidebar-items.js  struct.ClientBuilder.html  struct.DebugInfo.html  struct.Error.html  struct.ExtensionMap.html  struct.HeaderPair.html  struct.Location.html  struct.Observable.html  struct.QueryBody.html  struct.QueryError.html  struct.QueryOptions.html  struct.Response.html  trait.GraphQLQuery.html  type.Extensions.html
artemis-build/: Cargo.toml
artemis-build/src/: lib.rs
artemis-build/src/introspect/: mod.rs  query.rs
artemis-build/tests/: integration.rs
artemis-codegen-proc-macro/: Cargo.toml
artemis-codegen-proc-macro/src/: lib.rs
artemis-load-gen/: Cargo.toml  build.rs
artemis-load-gen/src/: main.rs
artemis-load-gen/src/queries/: add_conference.graphql  add_conference.rs  get_conference.graphql  get_conference.rs  mod.rs
artemis-normalized-cache/: Cargo.toml  README.md
artemis-normalized-cache/benches/: bench.rs
artemis-normalized-cache/benches/queries/: books.rs  complex_author.rs  employees.rs  mod.rs  stores.rs  todos.rs  writers.rs
artemis-normalized-cache/src/: cache_exchange.rs  lib.rs  types.rs
artemis-normalized-cache/src/cache_exchange/: mod.rs  tests.rs
artemis-normalized-cache/src/store/: data.rs  deserializer.rs  mod.rs  serializer.rs  store.rs
artemis-test/: Cargo.toml  api-schema.json  build.rs
artemis-test/src/: client.rs  lib.rs
artemis-test/src/queries/: add_conference.graphql  get_conferences.graphql  mod.rs
artemis-tests/: .gitignore  Cargo.toml  build.rs
artemis-tests/src/: lib.rs
artemis-tests/src/queries/: get_conference.graphql  get_conference.rs  mod.rs
artemis/benches/: integration_bench.rs
artemis/client/: index.html  sidebar-items.js  struct.Client.html  struct.ClientBuilder.html  struct.ClientImpl.html
artemis/client/builder/: struct.ClientBuilder.html
artemis/client/impl/: struct.ClientImpl.html
artemis/codegen/: enum.FieldSelector.html  index.html  sidebar-items.js  trait.QueryInfo.html
artemis/default_exchanges/: index.html  sidebar-items.js  struct.CacheExchange.html  struct.DedupExchange.html  struct.FetchExchange.html  struct.TerminatorExchange.html
artemis/default_exchanges/cache/: struct.CacheExchange.html
artemis/default_exchanges/dedup/: struct.DedupExchange.html
artemis/default_exchanges/fetch/: struct.FetchExchange.html
artemis/error/: struct.QueryError.html
artemis/exchange/: enum.OperationType.html  index.html  sidebar-items.js  struct.Operation.html  struct.OperationMeta.html  struct.OperationOptions.html  struct.OperationResult.html  trait.Client.html  trait.Exchange.html  trait.ExchangeFactory.html  trait.Extension.html  type.ExchangeResult.html
artemis/exchanges/: index.html  sidebar-items.js  struct.CacheExchange.html  struct.DedupExchange.html  struct.FetchExchange.html  struct.TerminatorExchange.html  trait.Client.html
artemis/exchanges/cache/: struct.CacheExchange.html
artemis/exchanges/dedup/: struct.DedupExchange.html
artemis/exchanges/fetch/: struct.FetchExchange.html
artemis/src/: client.rs  definitions.rs  error.rs  lib.rs  types.rs  utils.rs
artemis/src/client/: builder.rs  impl.rs  mod.rs  observable.rs  wasm.rs
artemis/src/default_exchanges/: cache.rs  dedup.rs  fetch.rs  mod.rs  subscription.rs
artemis/src/exchanges/: cache.rs  dedup.rs  fetch.rs  mod.rs
artemis/src/middlewares/: cache.rs  fetch.rs  mod.rs
artemis/tests/: integration.rs  integration.test.ts  wasm.rs
artemis/types/: enum.FieldSelector.html  enum.OperationType.html  enum.RequestPolicy.html  enum.ResultSource.html  index.html  sidebar-items.js  struct.DebugInfo.html  struct.ExtensionMap.html  struct.HeaderPair.html  struct.Observable.html  struct.Operation.html  struct.OperationMeta.html  struct.OperationOptions.html  struct.OperationResult.html  struct.QueryOptions.html  trait.Client.html  trait.Exchange.html  trait.ExchangeFactory.html  trait.Extension.html  trait.QueryInfo.html  type.ExchangeResult.html  type.Extensions.html
artemis/utils/: fn.progressive_hash.html  index.html  sidebar-items.js
artemis_codegen/: Cargo.toml  all.html  enum.CodegenError.html  enum.CodegenMode.html  fn.generate_module_token_stream.html  fn.generate_root_token_stream.html  index.html  sidebar-items.js  struct.GraphQLClientCodegenOptions.html
artemis_codegen/codegen_options/: enum.CodegenMode.html  struct.GraphQLClientCodegenOptions.html
artemis_codegen/deprecation/: enum.DeprecationStatus.html  enum.DeprecationStrategy.html  index.html  sidebar-items.js
artemis_codegen/normalization/: enum.Normalization.html  index.html  sidebar-items.js
artemis_codegen/schema/: index.html
artemis_codegen/src/: codegen.rs  codegen_options.rs  constants.rs  deprecation.rs  enums.rs  field_type.rs  fragments.rs  generated_module.rs  inputs.rs  interfaces.rs  introspection_response.rs  lib.rs  normalization.rs  objects.rs  operations.rs  query.rs  scalars.rs  schema.rs  selection.rs  shared.rs  unions.rs  utils.rs  variables.rs  wasm.rs
artemis_codegen/src/extensions/: mod.rs
artemis_codegen/src/tests/: github.rs  mod.rs
artemis_codegen/tests/: api-schema.json  get_election.graphql  get_election.rs  integration.rs
artemis_codegen/wasm/: fn.wasm_client.html  index.html  sidebar-items.js  struct.WasmClientInput.html
(+6435 files in other folders)
