[package]
name = "artemis-build"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[features]
rustfmt = ["rustfmt-nightly"]
introspect = ["reqwest", "serde", "serde_json", "artemis"]

[dependencies]
artemis_codegen = { path = "../artemis_codegen" }
rustfmt-nightly = { version = "1.4", optional = true }
syn = "1"

# For introspection
reqwest = { version = "0.9", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
artemis = { path = "../artemis", optional = true }