[package]
name = "artemis-build"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"
description = "Build time tooling for the artemis crate."
repository = "https://github.com/wingertge/artemis.git"
keywords = ["build", "artemis"]
categories = ["web-programming", "development-tools::build-utils", "development-tools"]
license = "MIT OR Apache-2.0"

[features]
rustfmt = ["rustfmt-nightly"]
introspect = ["reqwest", "serde", "serde_json", "artemis"]
fmt-typescript = ["artemis_codegen/fmt-typescript"]

[dependencies]
artemis_codegen = { path = "../artemis_codegen", version = "^0.1.0" }
rustfmt-nightly = { version = "1.4", optional = true }
syn = "1"

# For introspection
reqwest = { version = "0.10", features = ["blocking", "json"], optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
artemis = { path = "../artemis", version = "^0.1.0", optional = true }

[dev-dependencies]
artemis-test = { path = "../artemis-test" }