[package]
name = "artemis-codegen-proc-macro"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
artemis_codegen = { path = "../artemis_codegen" }

[dev-dependencies]
artemis = { path = "../artemis" }
artemis-test = { path = "../artemis-test" }