[package]
name = "artemis-codegen-proc-macro"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"
description = "Proc macros for the artemis crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wingertge/artemis.git"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
artemis_codegen = { path = "../artemis_codegen", version = "^0.1.0" }

[dev-dependencies]
artemis = { path = "../artemis" }
artemis-test = { path = "../artemis-test" }