[package]
name = "artemis-load-gen"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artemis = { path = "../artemis" }
rayon = "1.3"
rand = "0.7"
tokio-test = "0.2"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
artemis-build = { path = "../artemis-build", features = ["introspect"] }

[target."x86_64-unknown-linux-gnu".dependencies]
coz = "0.1"