[package]
name = "artemis-load-gen"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[dependencies]
artemis = { path = "../artemis" }
rayon = "1.3"
rand = "0.7"
tokio-test = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

[build-dependencies]
artemis-build = { path = "../artemis-build" }

[target."x86_64-unknown-linux-gnu".dependencies]
coz = "0.1"