[package]
name = "artemis-normalized-cache"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artemis = { path = "../artemis" }
serde = "1"
serde_json = "1"
async-trait = "0.1"
parking_lot = "0.10"
flurry = "0.1"
lazy_static = "1.4"