[package]
name = "artemis-normalized-cache"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artemis = { path = "../artemis" }
serde = "1"
serde_json = "1"
async-trait = "0.1"
parking_lot = "0.10"
flurry = "0.1"
lazy_static = "1.4"

[dev-dependencies]
artemis-test = { path = "../artemis-test" }
racetrack = "0.0.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
type-map = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.1"