[package]
name = "artemis-normalized-cache"
version = "0.1.1"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"
description = "A graph-based normalized cache exchange for the artemis crate."
readme = "README.md"
repository = "https://github.com/wingertge/artemis.git"
keywords = ["caching", "graphql", "web", "artemis", "exchange"]
categories = ["web-programming", "wasm", "asynchronous", "caching"]
license = "MIT OR Apache-2.0"

[[bench]]
name = "bench"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artemis = { path = "../artemis", version = "^0.1.0" }
serde = "1"
serde_json = "1"
async-trait = "0.1"
parking_lot = "0.10"
flurry = "0.3"
crossbeam-epoch = "0.8"
fnv = "1"

[dev-dependencies]
artemis-test = { path = "../artemis-test" }
racetrack = "0.0.2"
tokio = { version = "1.3", features = ["full"] }
futures = "0.3"
type-map = "0.5"
lazy_static = "1.4"
criterion = "0.3"
chrono = "0.4"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.1"