[package]
name = "artemis-test"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
artemis = { path = "../artemis" }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
rustversion = "1"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
artemis-build = { path = "../artemis-build", features = ["introspect"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-typescript-definition = "0.1"
serde-wasm-bindgen = "0.1"
js-sys = "0.3"
async-trait = "0.1"
futures = "0.3"