[package]
name = "artemis-tests"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artemis = { path = "../artemis" }
serde = "1"

[build-dependencies]
artemis-build = { path = "../artemis-build" }
rustversion = "1"