[package]
name = "artemis_codegen"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
graphql_client_codegen = { git = "https://github.com/graphql-rust/graphql-client.git" }
failure = "0.1"

[dev-dependencies]
artemis = { path = "../artemis" }
serde = "1"