[package]
name = "artemis_codegen"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-parser = "0.2"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = { version = "1", features = [] }
syn = { version = "1", features = ["full", "clone-impls"] }
quote = "1"
heck = "0.3"

[dev-dependencies]
artemis = { path = "../artemis" }