[package]
name = "artemis_codegen"
version = "0.1.0"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Code generation for the artemis crate"
repository = "https://github.com/wingertge/artemis.git"

[features]
fmt-typescript = ["dprint-plugin-typescript"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-parser = "0.2"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = { version = "1", features = [] }
syn = { version = "1", features = ["full", "clone-impls"] }
quote = "1"
heck = "0.3"
dprint-plugin-typescript = { version = "0.77", optional = true }

[dev-dependencies]
artemis = { path = "../artemis" }